<resources>
    <string name="app_name">Quick Browser</string>
    <string name="app_name_main">uick Browser</string>
    <string name="bubble_description">Web page bubble</string>
    <string name="close_bubble">Close bubble</string>
    <string name="close_tab">Close tab</string>
    <string name="open_in_full_view">Open in full view</string>
    <string name="read_mode">Reader mode</string>
    <string name="save_article">Save article</string>
    <string name="saved_articles">Saved articles</string>
    <string name="save_for_offline">Save for offline</string>
    <string name="page_saved_offline">Page saved for offline reading</string>
    <string name="save_to_folder">Save to Folder</string>
    <string name="save_to_tag">Save to...</string>
    <string name="default_tag">Default</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="add_new_bubble">Add new bubble</string>
    <string name="no_bubbles">No open tabs</string>
    <string name="favicon">Website icon</string>
    <string name="bubble_icon">Bubble icon</string>
    <string name="open_tabs">Open Tabs</string>
    <string name="favicon_description">Website Icon</string>
    <string name="reader_mode_loaded">Reader mode loaded</string>
    <string name="failed_to_load_reader_mode">Failed to load reader mode</string>
    <string name="resize_handle">Resize handle</string>
    <string name="site_icon">Site icon</string>
    <string name="minimize_bubble">Minimize bubble</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="more_options">More options</string>
    <string name="open">Open</string>
    <string name="enter_url_hint">Enter URL or search...</string>
    <string name="go_to_url">Go to URL</string>
    <string name="settings_title">Settings</string>
    <string name="settings_ad_blocking">Ad Blocking</string>
    <string name="settings_ad_blocking_summary">Block ads and trackers</string>
    <string name="settings_bubble_size">Bubble Size</string>
    <string name="settings_bubble_opacity">Bubble Opacity</string>
    <string name="settings_save_bubble_position">Remember Bubble Positions</string>
    <string name="settings_save_bubble_position_summary">Save and restore bubble positions for websites</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="size_extra_large">Extra Large</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_medium">Medium</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_very_fast">Very Fast</string>
    <string name="speed_normal">Normal</string>
    <string name="bubble_position_right">Position on right side</string>
    <string name="app_logo">Quick Browser Logo</string>
    <string name="app_description">Fast and lightweight browser</string>
    <string name="start_bubble_browser">Start quick browser</string>
    <string name="usage_hint">Enter a URL in the address bar below to open it in a bubble</string>
    <string name="browser_settings">Browser Settings</string>
    <string name="enable_javascript">Enable JavaScript</string>
    <string name="block_ads">Block ads</string>
    <string name="block_ads_and_trackers">Block ads and trackers</string>
    <string name="appearance">Appearance</string>
    <string name="night_mode">Night Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="zoom">Zoom</string>
    <string name="theme_color">Theme Color</string>
    <string name="choose_theme_color">Choose Theme Color</string>
    <string name="theme_color_changed">Theme color changed to %1$s</string>
    <string name="selected_color">Selected color</string>
    <string name="apply">Apply</string>
    <string name="use_dynamic_colors">Use dynamic colors from wallpaper</string>
    <string name="dynamic_colors_enabled">Dynamic colors enabled</string>
    <string name="dynamic_colors_disabled">Dynamic colors disabled</string>
    <string name="privacy">Privacy</string>
    <string name="save_browsing_history">Save browsing history</string>
    <string name="encrypt_saved_pages">Encrypt saved pages</string>
    <string name="show_url_bar">Show URL Bar</string>
    <string name="browsing_history">Browsing History</string>
    <string name="search_history">Search history</string>
    <string name="sites_visited">Sites Visited</string>
    <string name="yesterday">Yesterday</string>
    <string name="this_week">This Week</string>
    <string name="offline">Offline</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="start_browsing_hint">Start browsing to see your history here</string>
    <string name="no_history_found">No browsing history found</string>
    <string name="clear_history">Clear history</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="delete_tag_confirmation">Are you sure you want to delete the tag \"%1$s\"? All articles associated with this tag will remain but will not be associated with any tag.</string>
    <string name="tag_name_cannot_be_empty">Tag name cannot be empty</string>
    <string name="clear_history_confirmation">Clear History?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="history_empty_message">Your browsing history will appear here</string>
    <string name="web_view_mode">Switched to web view mode</string>
    <string name="increase_text_size">Increase text size</string>
    <string name="decrease_text_size">Decrease text size</string>
    <string name="toggle_night_mode">Toggle night mode</string>
    <string name="text_to_speech">Read aloud</string>
    <string name="error_loading_content">Error loading content</string>
    <string name="reader_settings_title">Reader Settings</string>
    <string name="reader_font_size">Font Size</string>
    <string name="reader_background">Background</string>
    <string name="reader_text_align">Text Alignment</string>
    <string name="reader_save_offline">Save for Offline</string>
    <string name="reader_bg_white">White</string>
    <string name="reader_bg_sepia">Sepia</string>
    <string name="reader_bg_dark">Dark</string>
    <string name="reader_align_left">Left</string>
    <string name="reader_align_center">Center</string>
    <string name="reader_align_right">Right</string>
    <string name="reader_align_justify">Justify</string>
    <string name="article_saved_success">Article saved for offline reading</string>
    <string name="article_save_failed">Failed to save article</string>
    <string name="accessibility">Accessibility</string>
    <string name="automatic_font_sizing">Automatic Font Sizing</string>
    <string name="automatic_font_sizing_desc">Use system font size settings</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_desc">Make text on web sites smaller or larger</string>
    <string name="font_size_preview">Preview text size: %1$d</string>
    <string name="font_size_sample_text">This is sample text. It is here to show how text will appear when you increase or decrease the size with this setting.</string>
    <string name="article_already_saved">Article already saved</string>
    <string name="article_extraction_failed">Failed to extract article content</string>
    <string name="original_page_saved_success">Original page saved for offline reading</string>
    <string name="original_page_save_failed">Failed to save original page</string>
    <string name="offline_reader">Offline Reader</string>
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_xl">Extra Large</string>
    <string name="offline_pages">Offline Pages</string>
    <string name="no_offline_pages">No offline pages saved</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_page">Delete Page</string>
    <string name="delete_page_confirmation">Are you sure you want to delete \'%1$s\'?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_pages">Delete All Pages</string>
    <string name="delete_all_confirmation">Are you sure you want to delete all offline pages? This cannot be undone.</string>
    <string name="delete_all_button">Delete All</string>
    <string name="page_deleted">Page deleted</string>
    <string name="error_deleting_page">Error deleting page</string>
    <string name="pages_deleted">Deleted %1$d pages</string>
    <string name="save_for_offline_reading">Save for offline reading</string>
    <string name="page_saved_for_offline">Page saved for offline reading</string>
    <string name="saving_page_offline">Saving page for offline reading...</string>
    <string name="error_saving_page">Error saving page</string>
    <string name="error_loading_page">Error loading offline page</string>
    <string name="saving_page">Saving page...</string>
    <string name="downloading_resources">Downloading resources...</string>
    <string name="saved_on_date">Saved on %1$s</string>
    <string name="sharing_not_implemented">Sharing not implemented</string>
    <string name="untitled_page">Untitled</string>
    <string name="refresh">Refresh</string>
    <string name="share">Share</string>
    <string name="summarize">Summarize</string>
    <string name="summarizing">Summarizing article...</string>
    <string name="showing_summary">Showing article summary</string>
    <string name="showing_web_view">Showing web view</string>
    <string name="show_web_view">Show web view</string>
    <string name="summary_title">Article Summary</string>
    <string name="summary_error">Could not summarize this article</string>
    <string name="summary_error_no_content">No content found to summarize</string>
    <string name="summary_not_article">This page does not appear to be an article</string>
    <string name="summary_timeout">Summarization timed out. The article may be too long or complex.</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="share_via">Share via</string>
    <string name="share_failed">Failed to share link</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_read_mode">Reader Mode</string>
    <string name="web_view">Web View</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="history_title">History</string>
    <string name="close">Close</string>
    <string name="all_articles">All Articles</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add Tag</string>
    <string name="tag_name">Tag Name</string>
    <string name="tag_options">Tag options</string>
    <string name="create_new_tag">Create New Tag</string>
    <string name="create">Create</string>
    <string name="no_folder">No Folder</string>
    <string name="bubble_service_channel_name">Browser Service</string>
    <string name="bubble_service_channel_description">Keeps the quick browser running in background</string>
    <string name="bubble_service_notification_text">Browser is running in bubble mode</string>
    <string name="menu">Menu</string>
    <string name="menu_delete_today">Delete Today</string>
    <string name="menu_delete_last_month">Delete Last Month</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="saved_articles_view_style">Saved Articles View Style</string>
    <string name="card_view">Card View</string>
    <string name="compact_card">Compact Card</string>
    <string name="compact_view">Compact View</string>
    <string name="super_compact">Super Compact</string>
</resources>