<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_increase_text"
        android:icon="@drawable/ic_text_increase"
        android:title="@string/increase_text_size"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_decrease_text"
        android:icon="@drawable/ic_text_decrease"
        android:title="@string/decrease_text_size"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_toggle_night_mode"
        android:icon="@drawable/ic_night_mode"
        android:title="@string/toggle_night_mode"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_text_to_speech"
        android:icon="@drawable/ic_text_to_speech"
        android:title="@string/text_to_speech"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
</menu>